CS_PROD_20150209_01/Metadata/unpackaged/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Training_Audience__c</fullName>
        <description>Created by LM on 3/4/2014 for Phase2</description>
        <label>Training Audience</label>
        <picklist>
            <picklistValues>
                <fullName>New users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both New and Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Start_Date__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upset_Client_Notes__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Upset Client Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Upset_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Upset Client?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Usernames__c</fullName>
        <description>Created by LM on 9/17/2013 for Phase 2 rollout</description>
        <label>Usernames</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Were_search_terms_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 9/5/2013 for Phase 2 rollout</description>
        <label>Were search terms updated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Which_Campaign__c</fullName>
        <description>Created by LM on 9/17/2013 for Phase 2 rollout</description>
        <label>Which Campaign?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wise_Site_ID__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Wise Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>All_Open_CS_Tickets</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Client_Services</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open CS Tickets</label>
        <sharedTo>
            <role>Client_Services</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Training_Cases</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>State_Province__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Training</value>
        </filters>
        <label>All Open Training Cases</label>
        <sharedTo>
            <group>Training</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_Client_Services_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Contract Admin Button</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>On Hold,Escalated,New</value>
        </filters>
        <label>CA&apos;s Client Services Queue</label>
        <sharedTo>
            <group>Contract_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_Queue_Assigned</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Parent_Case_Owner__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Contract Admin Button</value>
        </filters>
        <label>CA Queue - Assigned</label>
        <sharedTo>
            <group>Client_Services</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CP_Support_Case</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>CP Support</label>
        <queue>CP_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CP_Support_Open_Cases</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Cecil,KaelberHenchcliffe,Flores,McKenney,Courlander,Osborne,Testa,Ashford</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Hahn,Greiner</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>CP Support Open Cases</label>
        <sharedTo>
            <group>Client_Services</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Sales_Support_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Sales Support Button</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Sales Support Cases</label>
    </listViews>
    <listViews>
        <fullName>DCS</fullName>
        <filterScope>Queue</filterScope>
        <label>DCS</label>
        <queue>DCS</queue>
        <sharedTo>
            <group>DCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DCS_Queue_Assigned</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Parent_Case_Owner__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>DCS Button</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>DCS</value>
        </filters>
        <label>DCS Queue - Assigned</label>
        <sharedTo>
            <group>Client_Services</group>
            <group>DCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DCS_Queue_Unassigned</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Parent_Case_Owner__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>DCS Queue - Unassigned</label>
        <queue>DCS</queue>
        <sharedTo>
            <group>Client_Services</group>
            <group>DCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Demonze_Open_case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <columns>Jira_Number__c</columns>
        <columns>Service_Desk_Ticket_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SSG_Rep__c</field>
            <operation>equals</operation>
            <value>Demonze Spruiel-Rose</value>
        </filters>
        <filters>
            <field>Route_to_SSG__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Demonze Open case</label>
    </listViews>
    <listViews>
        <fullName>Josh_s_open_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SSG_Rep__c</field>
            <operation>equals</operation>
            <value>Josh Elliott</value>
        </filters>
        <filters>
            <field>Route_to_SSG__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Josh&apos;s open cases</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Training_Tasks</fullName>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Follow_Up_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Training</value>
        </filters>
        <label>My Closed Training Tasks</label>
        <sharedTo>
            <group>Training</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Tickets</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>My Open Tickets</label>
        <sharedTo>
            <group>Client_Services</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Training_Tasks</fullName>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Follow_Up_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Training</value>
        </filters>
        <label>My Open Training Tasks</label>
        <sharedTo>
            <group>Training</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Client_Services</fullName>
        <active>true</active>
        <businessProcess>Client Services</businessProcess>
        <label>Client Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_Admin_Request</fullName>
        <active>true</active>
        <businessProcess>Client Services</businessProcess>
        <label>Contract Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCS_Add_Subscriptions_DataHub</fullName>
        <active>true</active>
        <businessProcess>DCS</businessProcess>
        <label>DCS Add Subscriptions DataHub</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCS_Add_Subscriptions_Orion</fullName>
        <active>true</active>
        <businessProcess>DCS</businessProcess>
        <label>DCS Add Subscriptions Orion</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCS_Broadcast_Issues</fullName>
        <active>true</active>
        <businessProcess>DCS</businessProcess>
        <label>DCS Broadcast Issues</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCS_Feed_Setups</fullName>
        <active>true</active>
        <businessProcess>DCS</businessProcess>
        <label>DCS Feed Setups</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCS_Gnip_Setups</fullName>
        <active>true</active>
        <businessProcess>DCS</businessProcess>
        <label>DCS Gnip Setups</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCS_Mapping_Issues</fullName>
        <active>true</active>
        <businessProcess>DCS</businessProcess>
        <label>DCS Mapping Issues</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCS_Metadata_Issues</fullName>
        <active>true</active>
        <businessProcess>DCS</businessProcess>
        <label>DCS Metadata Issues</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCS_Missed_Articles</fullName>
        <active>true</active>
        <businessProcess>DCS</businessProcess>
        <label>DCS Missed Articles</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCS_Missed_Internet_Articles_MIAs</fullName>
        <active>true</active>
        <businessProcess>DCS</businessProcess>
        <label>DCS Missed Internet Articles (MIAs)</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCS_Missed_LexisNexis_Articles</fullName>
        <active>true</active>
        <businessProcess>DCS</businessProcess>
        <label>DCS Missed LexisNexis Articles</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCS_Radian6_Setups</fullName>
        <active>true</active>
        <businessProcess>DCS</businessProcess>
        <label>DCS Radian6 Setups</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCS_Site_Adjustments</fullName>
        <active>true</active>
        <businessProcess>DCS</businessProcess>
        <label>DCS Site Adjustments</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCS_Subscription_Additions</fullName>
        <active>true</active>
        <businessProcess>DCS</businessProcess>
        <label>DCS Subscription Additions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_Broadcast_Quote</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support Broadcast Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_Burrelles_Contracts_New_Biz</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support Burrelles Contracts New Biz</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_Burrelles_Contracts_Renewal</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support Burrelles Contracts Renewal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_Extension_Request</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <description>Sales Support Extension Request</description>
        <label>Sales Support Extension Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_Press_Report</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support Press Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_Pricing_Question</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support Pricing Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_Product_General_Question</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support Product General Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_Pub_Check</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support Pub Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_Quote_Quickly_Configuration</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support Quote Quickly Configuration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_RFP</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support RFP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_RPOST</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support RPOST</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_Trial_Extension_Request</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support Trial Extension Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_Trial_Questions_and_Modifications</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support Trial Questions and Modifications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_Trials</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support Trials</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_University_Program</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support University Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support_eNews_Quote</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support eNews Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <businessProcess>Client Services</businessProcess>
        <label>Training</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Development_Work_requires_Jira_Number</fullName>
        <active>true</active>
        <description>When Issue Status=Development Work, then a Jira Number is required.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Issue_Status__c, &quot;Development Work&quot;),
ISBLANK(Jira_Number__c) 
)</errorConditionFormula>
        <errorDisplayField>Jira_Number__c</errorDisplayField>
        <errorMessage>When the Issue Status is Development Work, then a Jira Number is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSG_Requirement</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Close_Reason__c,&quot;Outstanding Technical Issue&quot;),
OR(
ISBLANK(Number_of_Users_Affected__c),
ISPICKVAL(Browser__c,&quot;&quot;),
ISPICKVAL(Issue_Status__c,&quot;&quot;),
ISBLANK(Service_Desk_Ticket_Number__c),
ISBLANK(Jira_Number__c), 
ISBLANK(CisionPoint_Username__c) 
)
)</errorConditionFormula>
        <errorMessage>SSG Information is required in order to close the Case as Outstanding Technical Issue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Desk_Ticket_requires_Issue_Statu</fullName>
        <active>false</active>
        <description>When Service Desk Ticket Number is filled in, then Issue Status is required.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Issue_Status__c, &quot;&quot;),
NOT(ISBLANK(Service_Desk_Ticket_Number__c)) 
)</errorConditionFormula>
        <errorDisplayField>Issue_Status__c</errorDisplayField>
        <errorMessage>When a Service Desk Ticket Number is filled in, then Issue Status is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>test</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Feed_Setups_Subtypes__c, &quot;Radian6&quot;),
ISBLANK(Topic_Profile__c) 
)</errorConditionFormula>
        <errorMessage>test</errorMessage>
    </validationRules>
</CustomObject>